# 500_fps_raspberry_pi_global_shutter_cam

./: GScrop  README.md  capture_and_archive.sh  prepare_archive_for_sharing.sh
Beetles_checker_board_probing/: README.md  checker_board_color_search.py
camera_lib_impl/: CMakeLists.txt  README.md  global_shutter_rng.cpp
